# Zippy

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Zippy.hpp
test-folder/folder-a/: file3.txt
test-folder/folder-b/: file1.txt
test-folder/folder-b/folder-c/: file2.txt
